# Gdeeplearning

./: README.markdown  README.md  pyproject.toml
src/gdeeplearn/: __init__.py  simpleDL.py  simpleDL2.py
tests/: gdeeplearn_v1VsPytorch.ipynb  test_simpledl.py  test_simpledl2.py
